<resources>
    <string name="app_name">Friendship_Clinic</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active">Active</string>
    <string name="deactivate">Deactivate</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="banner">Banner</string>
</resources>