<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.mainPage.MainPageFragment">

    <ImageView
        android:id="@+id/imageBannerTop"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:src="@drawable/banner_top"
        android:contentDescription="@string/banner"
        app:layout_constraintDimensionRatio="390:126"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonActive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/transparent"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/active"
        android:textColor="@color/gray_2"
        app:layout_constraintDimensionRatio="180:30"
        app:layout_constraintEnd_toStartOf="@+id/buttonInactive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBannerTop"
        app:strokeColor="@color/gray_1"
        app:strokeWidth="@dimen/_1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonInactive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:backgroundTint="@android:color/transparent"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/deactivate"
        android:textColor="@color/gray_2"
        app:layout_constraintDimensionRatio="180:30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonActive"
        app:layout_constraintTop_toTopOf="@id/buttonActive"
        app:strokeColor="@color/gray_1"
        app:strokeWidth="@dimen/_1dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_16dp"
        android:paddingStart="@dimen/_8dp"
        android:paddingEnd="@dimen/_8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonActive"
        tools:listitem="@layout/item_user_active" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>